tests/error/undefined_name.ca

f = ->
  add(a b c)

int = make_vm(f)
int.run
assert(int.errored)
